src/dhbw/compilerbau/oberonparser/parser/OberonParser.java
// $ANTLR 3.5.2 /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g 2014-05-29 00:19:59
package dhbw.compilerbau.oberonparser.parser; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class OberonParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "BLOCK", "CHARACTER", 
		"CHARCONST", "COMMENT", "DECLARE", "DIGIT", "FORMAL_PARAMETERS", "HEX_DIGIT", 
		"ID", "IDENT", "INTEGER", "LETTER", "PROCEDURE", "PROCEDURE_BODY", "REAL", 
		"SCALE_FACTOR", "STRING", "TYPE_DECL", "WS", "'#'", "'&'", "'('", "')'", 
		"'*'", "'+'", "','", "'-'", "'.'", "'..'", "'/'", "':'", "':='", "';'", 
		"'<'", "'<='", "'='", "'>'", "'>='", "'ABS'", "'ARRAY'", "'ASH'", "'BEGIN'", 
		"'CAP'", "'CONST'", "'COPY'", "'DEC'", "'DIV'", "'DO'", "'ELSE'", "'ELSIF'", 
		"'END'", "'EXCL'", "'EXIT'", "'HALT'", "'IF'", "'IMPORT'", "'IN'", "'INC'", 
		"'INCL'", "'IS'", "'LEN'", "'LOOP'", "'MAX'", "'MIN'", "'MOD'", "'MODULE'", 
		"'NEW'", "'NIL'", "'ODD'", "'OF'", "'OR'", "'POINTER TO'", "'PROCEDURE'", 
		"'RECORD'", "'REPEAT'", "'RETURN'", "'SIZE'", "'THEN'", "'TYPE'", "'UNTIL'", 
		"'VAR'", "'WHILE'", "'WITH'", "'['", "']'", "'^'", "'case'", "'{'", "'|'", 
		"'}'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int ASSIGN=4;
	public static final int BLOCK=5;
	public static final int CHARACTER=6;
	public static final int CHARCONST=7;
	public static final int COMMENT=8;
	public static final int DECLARE=9;
	public static final int DIGIT=10;
	public static final int FORMAL_PARAMETERS=11;
	public static final int HEX_DIGIT=12;
	public static final int ID=13;
	public static final int IDENT=14;
	public static final int INTEGER=15;
	public static final int LETTER=16;
	public static final int PROCEDURE=17;
	public static final int PROCEDURE_BODY=18;
	public static final int REAL=19;
	public static final int SCALE_FACTOR=20;
	public static final int STRING=21;
	public static final int TYPE_DECL=22;
	public static final int WS=23;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public OberonParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public OberonParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return OberonParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g"; }


	public static class abs_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "abs"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:15:1: abs : 'ABS' ^ '(' ! number ')' !;
	public final OberonParser.abs_return abs() throws RecognitionException {
		OberonParser.abs_return retval = new OberonParser.abs_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token char_literal2=null;
		Token char_literal4=null;
		ParserRuleReturnScope number3 =null;

		Object string_literal1_tree=null;
		Object char_literal2_tree=null;
		Object char_literal4_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:15:23: ( 'ABS' ^ '(' ! number ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:15:25: 'ABS' ^ '(' ! number ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal1=(Token)match(input,43,FOLLOW_43_in_abs89); 
			string_literal1_tree = (Object)adaptor.create(string_literal1);
			root_0 = (Object)adaptor.becomeRoot(string_literal1_tree, root_0);

			char_literal2=(Token)match(input,26,FOLLOW_26_in_abs92); 
			pushFollow(FOLLOW_number_in_abs95);
			number3=number();
			state._fsp--;

			adaptor.addChild(root_0, number3.getTree());

			char_literal4=(Token)match(input,27,FOLLOW_27_in_abs97); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "abs"


	public static class odd_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "odd"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:16:1: odd : 'ODD' ^ '(' ! INTEGER ')' !;
	public final OberonParser.odd_return odd() throws RecognitionException {
		OberonParser.odd_return retval = new OberonParser.odd_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal5=null;
		Token char_literal6=null;
		Token INTEGER7=null;
		Token char_literal8=null;

		Object string_literal5_tree=null;
		Object char_literal6_tree=null;
		Object INTEGER7_tree=null;
		Object char_literal8_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:16:23: ( 'ODD' ^ '(' ! INTEGER ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:16:25: 'ODD' ^ '(' ! INTEGER ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal5=(Token)match(input,73,FOLLOW_73_in_odd123); 
			string_literal5_tree = (Object)adaptor.create(string_literal5);
			root_0 = (Object)adaptor.becomeRoot(string_literal5_tree, root_0);

			char_literal6=(Token)match(input,26,FOLLOW_26_in_odd126); 
			INTEGER7=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_odd129); 
			INTEGER7_tree = (Object)adaptor.create(INTEGER7);
			adaptor.addChild(root_0, INTEGER7_tree);

			char_literal8=(Token)match(input,27,FOLLOW_27_in_odd131); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "odd"


	public static class cap_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "cap"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:17:1: cap : 'CAP' ^ '(' ! CHARACTER ')' !;
	public final OberonParser.cap_return cap() throws RecognitionException {
		OberonParser.cap_return retval = new OberonParser.cap_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal9=null;
		Token char_literal10=null;
		Token CHARACTER11=null;
		Token char_literal12=null;

		Object string_literal9_tree=null;
		Object char_literal10_tree=null;
		Object CHARACTER11_tree=null;
		Object char_literal12_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:17:23: ( 'CAP' ^ '(' ! CHARACTER ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:17:25: 'CAP' ^ '(' ! CHARACTER ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal9=(Token)match(input,47,FOLLOW_47_in_cap173); 
			string_literal9_tree = (Object)adaptor.create(string_literal9);
			root_0 = (Object)adaptor.becomeRoot(string_literal9_tree, root_0);

			char_literal10=(Token)match(input,26,FOLLOW_26_in_cap176); 
			CHARACTER11=(Token)match(input,CHARACTER,FOLLOW_CHARACTER_in_cap179); 
			CHARACTER11_tree = (Object)adaptor.create(CHARACTER11);
			adaptor.addChild(root_0, CHARACTER11_tree);

			char_literal12=(Token)match(input,27,FOLLOW_27_in_cap181); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "cap"


	public static class ash_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ash"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:18:1: ash : 'ASH' ^ '(' ! INTEGER ')' !;
	public final OberonParser.ash_return ash() throws RecognitionException {
		OberonParser.ash_return retval = new OberonParser.ash_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal13=null;
		Token char_literal14=null;
		Token INTEGER15=null;
		Token char_literal16=null;

		Object string_literal13_tree=null;
		Object char_literal14_tree=null;
		Object INTEGER15_tree=null;
		Object char_literal16_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:18:23: ( 'ASH' ^ '(' ! INTEGER ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:18:25: 'ASH' ^ '(' ! INTEGER ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal13=(Token)match(input,45,FOLLOW_45_in_ash207); 
			string_literal13_tree = (Object)adaptor.create(string_literal13);
			root_0 = (Object)adaptor.becomeRoot(string_literal13_tree, root_0);

			char_literal14=(Token)match(input,26,FOLLOW_26_in_ash210); 
			INTEGER15=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_ash213); 
			INTEGER15_tree = (Object)adaptor.create(INTEGER15);
			adaptor.addChild(root_0, INTEGER15_tree);

			char_literal16=(Token)match(input,27,FOLLOW_27_in_ash215); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ash"


	public static class len_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "len"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:19:1: len : 'LEN' ^ '(' ! qualident ( ',' INTEGER )? ')' !;
	public final OberonParser.len_return len() throws RecognitionException {
		OberonParser.len_return retval = new OberonParser.len_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal17=null;
		Token char_literal18=null;
		Token char_literal20=null;
		Token INTEGER21=null;
		Token char_literal22=null;
		ParserRuleReturnScope qualident19 =null;

		Object string_literal17_tree=null;
		Object char_literal18_tree=null;
		Object char_literal20_tree=null;
		Object INTEGER21_tree=null;
		Object char_literal22_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:19:23: ( 'LEN' ^ '(' ! qualident ( ',' INTEGER )? ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:19:25: 'LEN' ^ '(' ! qualident ( ',' INTEGER )? ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal17=(Token)match(input,65,FOLLOW_65_in_len241); 
			string_literal17_tree = (Object)adaptor.create(string_literal17);
			root_0 = (Object)adaptor.becomeRoot(string_literal17_tree, root_0);

			char_literal18=(Token)match(input,26,FOLLOW_26_in_len244); 
			pushFollow(FOLLOW_qualident_in_len247);
			qualident19=qualident();
			state._fsp--;

			adaptor.addChild(root_0, qualident19.getTree());

			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:19:47: ( ',' INTEGER )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==30) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:19:48: ',' INTEGER
					{
					char_literal20=(Token)match(input,30,FOLLOW_30_in_len250); 
					char_literal20_tree = (Object)adaptor.create(char_literal20);
					adaptor.addChild(root_0, char_literal20_tree);

					INTEGER21=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_len252); 
					INTEGER21_tree = (Object)adaptor.create(INTEGER21);
					adaptor.addChild(root_0, INTEGER21_tree);

					}
					break;

			}

			char_literal22=(Token)match(input,27,FOLLOW_27_in_len256); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "len"


	public static class maxMin_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "maxMin"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:1: maxMin : ( ( 'MAX' ^| 'MIN' ^) '(' ! qualident | set ')' !);
	public final OberonParser.maxMin_return maxMin() throws RecognitionException {
		OberonParser.maxMin_return retval = new OberonParser.maxMin_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal23=null;
		Token string_literal24=null;
		Token char_literal25=null;
		Token char_literal28=null;
		ParserRuleReturnScope qualident26 =null;
		ParserRuleReturnScope set27 =null;

		Object string_literal23_tree=null;
		Object string_literal24_tree=null;
		Object char_literal25_tree=null;
		Object char_literal28_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:23: ( ( 'MAX' ^| 'MIN' ^) '(' ! qualident | set ')' !)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( ((LA3_0 >= 67 && LA3_0 <= 68)) ) {
				alt3=1;
			}
			else if ( (LA3_0==92) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:25: ( 'MAX' ^| 'MIN' ^) '(' ! qualident
					{
					root_0 = (Object)adaptor.nil();


					// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:25: ( 'MAX' ^| 'MIN' ^)
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==67) ) {
						alt2=1;
					}
					else if ( (LA2_0==68) ) {
						alt2=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}

					switch (alt2) {
						case 1 :
							// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:26: 'MAX' ^
							{
							string_literal23=(Token)match(input,67,FOLLOW_67_in_maxMin280); 
							string_literal23_tree = (Object)adaptor.create(string_literal23);
							root_0 = (Object)adaptor.becomeRoot(string_literal23_tree, root_0);

							}
							break;
						case 2 :
							// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:33: 'MIN' ^
							{
							string_literal24=(Token)match(input,68,FOLLOW_68_in_maxMin283); 
							string_literal24_tree = (Object)adaptor.create(string_literal24);
							root_0 = (Object)adaptor.becomeRoot(string_literal24_tree, root_0);

							}
							break;

					}

					char_literal25=(Token)match(input,26,FOLLOW_26_in_maxMin287); 
					pushFollow(FOLLOW_qualident_in_maxMin290);
					qualident26=qualident();
					state._fsp--;

					adaptor.addChild(root_0, qualident26.getTree());

					}
					break;
				case 2 :
					// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:20:56: set ')' !
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_set_in_maxMin292);
					set27=set();
					state._fsp--;

					adaptor.addChild(root_0, set27.getTree());

					char_literal28=(Token)match(input,27,FOLLOW_27_in_maxMin294); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "maxMin"


	public static class size_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "size"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:22:1: size : 'SIZE' ^ '(' ! qualident ')' !;
	public final OberonParser.size_return size() throws RecognitionException {
		OberonParser.size_return retval = new OberonParser.size_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal29=null;
		Token char_literal30=null;
		Token char_literal32=null;
		ParserRuleReturnScope qualident31 =null;

		Object string_literal29_tree=null;
		Object char_literal30_tree=null;
		Object char_literal32_tree=null;

		try {
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:22:23: ( 'SIZE' ^ '(' ! qualident ')' !)
			// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:22:25: 'SIZE' ^ '(' ! qualident ')' !
			{
			root_0 = (Object)adaptor.nil();


			string_literal29=(Token)match(input,81,FOLLOW_81_in_size320); 
			string_literal29_tree = (Object)adaptor.create(string_literal29);
			root_0 = (Object)adaptor.becomeRoot(string_literal29_tree, root_0);

			char_literal30=(Token)match(input,26,FOLLOW_26_in_size323); 
			pushFollow(FOLLOW_qualident_in_size326);
			qualident31=qualident();
			state._fsp--;

			adaptor.addChild(root_0, qualident31.getTree());

			char_literal32=(Token)match(input,27,FOLLOW_27_in_size328); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "size"


	public static class inc_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "inc"
	// /home/dominik/dev/java/OberonParser/src/dhbw/compilerbau/oberonparser/parser/Oberon.g:24:1: inc : 'INC' ^ '(' ! INTEGER ( ',' ! INTEGER )? ')' !;
	public final OberonParser.inc_return inc() throws RecognitionException {
		OberonParser.inc_return retval = new OberonParser.inc_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal33=null;
		Token char_literal34=null;
		Token INTEGER35=null;
		Token char_literal36=null;
		Token INTEGER37=null;
		Token char_literal38=null;

		Object string_literal33_tree=null;
		Object char_literal34_tree=null;
		Object INTEGER35_tree=null;
		Object char_literal36_tree=null;
		Object INTEGER37_tree=null;
		Object char_literal38_tree=null;
